@@ -93,13 +93,15 @@ import org.eclipse.lsp4j.WorkspaceEdit;
 import org.eclipse.lsp4j.jsonrpc.messages.Either;
 import org.eclipse.lsp4j.jsonrpc.messages.Either3;
 import org.eclipse.lsp4j.services.TextDocumentService;
+import org.springframework.scheduling.concurrent.CustomizableThreadFactory;
 import org.springframework.stereotype.Component;
 
 import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 @Component
 @RequiredArgsConstructor
@@ -123,14 +125,17 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
   private final RenameProvider renameProvider;
   private final InlayHintProvider inlayHintProvider;
 
+  private final ExecutorService executorService = Executors.newCachedThreadPool(new CustomizableThreadFactory("text-document-service-"));
+
   @Override
   public CompletableFuture<Hover> hover(HoverParams params) {
     var documentContext = context.getDocument(params.getTextDocument().getUri());
     if (documentContext == null) {
       return CompletableFuture.completedFuture(null);
     }
-    return CompletableFuture.supplyAsync(() ->
-      hoverProvider.getHover(documentContext, params).orElse(null)
+    return CompletableFuture.supplyAsync(
+      () -> hoverProvider.getHover(documentContext, params).orElse(null),
+      executorService
     );
   }
 
@@ -143,8 +148,9 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Either.forRight(Collections.emptyList()));
     }
 
-    return CompletableFuture.supplyAsync(() ->
-      Either.forRight(definitionProvider.getDefinition(documentContext, params))
+    return CompletableFuture.supplyAsync(
+      () -> Either.forRight(definitionProvider.getDefinition(documentContext, params)),
+      executorService
     );
   }
 
@@ -155,7 +161,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> referencesProvider.getReferences(documentContext, params));
+    return CompletableFuture.supplyAsync(
+      () -> referencesProvider.getReferences(documentContext, params),
+      executorService
+    );
   }
 
   @Override
@@ -167,10 +176,11 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    return CompletableFuture.supplyAsync(() ->
-      documentSymbolProvider.getDocumentSymbols(documentContext).stream()
+    return CompletableFuture.supplyAsync(
+      () -> documentSymbolProvider.getDocumentSymbols(documentContext).stream()
         .map(Either::<SymbolInformation, DocumentSymbol>forRight)
-        .collect(Collectors.toList())
+        .toList(),
+      executorService
     );
   }
 
@@ -181,7 +191,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    return CompletableFuture.supplyAsync(() -> codeActionProvider.getCodeActions(params, documentContext));
+    return CompletableFuture.supplyAsync(
+      () -> codeActionProvider.getCodeActions(params, documentContext),
+      executorService
+    );
   }
 
   @Override
@@ -191,7 +204,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> codeLensProvider.getCodeLens(documentContext));
+    return CompletableFuture.supplyAsync(
+      () -> codeLensProvider.getCodeLens(documentContext),
+      executorService
+    );
   }
 
   @Override
@@ -201,7 +217,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
     if (documentContext == null) {
       return CompletableFuture.completedFuture(unresolved);
     }
-    return CompletableFuture.supplyAsync(() -> codeLensProvider.resolveCodeLens(documentContext, unresolved, data));
+    return CompletableFuture.supplyAsync(
+      () -> codeLensProvider.resolveCodeLens(documentContext, unresolved, data),
+      executorService
+    );
   }
 
   @Override
@@ -211,8 +230,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    List<TextEdit> edits = formatProvider.getFormatting(params, documentContext);
-    return CompletableFuture.completedFuture(edits);
+    return CompletableFuture.supplyAsync(
+      () -> formatProvider.getFormatting(params, documentContext),
+      executorService
+    );
   }
 
   @Override
@@ -222,8 +243,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    List<TextEdit> edits = formatProvider.getRangeFormatting(params, documentContext);
-    return CompletableFuture.completedFuture(edits);
+    return CompletableFuture.supplyAsync(
+      () -> formatProvider.getRangeFormatting(params, documentContext),
+      executorService
+    );
   }
 
   @Override
@@ -233,7 +256,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    return CompletableFuture.supplyAsync(() -> foldingRangeProvider.getFoldingRange(documentContext));
+    return CompletableFuture.supplyAsync(
+      () -> foldingRangeProvider.getFoldingRange(documentContext),
+      executorService
+    );
   }
 
   @Override
@@ -244,13 +270,15 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    return CompletableFuture.supplyAsync(() -> {
-      List<CallHierarchyItem> callHierarchyItems = callHierarchyProvider.prepareCallHierarchy(documentContext, params);
-      if (callHierarchyItems.isEmpty()) {
-        return null;
-      }
-      return callHierarchyItems;
-    });
+    return CompletableFuture.supplyAsync(
+      () -> {
+        List<CallHierarchyItem> callHierarchyItems = callHierarchyProvider.prepareCallHierarchy(documentContext, params);
+        if (callHierarchyItems.isEmpty()) {
+          return null;
+        }
+        return callHierarchyItems;
+      },
+      executorService);
   }
 
   @Override
@@ -262,7 +290,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> callHierarchyProvider.incomingCalls(documentContext, params));
+    return CompletableFuture.supplyAsync(
+      () -> callHierarchyProvider.incomingCalls(documentContext, params),
+      executorService
+    );
   }
 
   @Override
@@ -274,7 +305,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> callHierarchyProvider.outgoingCalls(documentContext, params));
+    return CompletableFuture.supplyAsync(
+      () -> callHierarchyProvider.outgoingCalls(documentContext, params),
+      executorService
+    );
   }
 
   @Override
@@ -284,7 +318,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> selectionRangeProvider.getSelectionRange(documentContext, params));
+    return CompletableFuture.supplyAsync(
+      () -> selectionRangeProvider.getSelectionRange(documentContext, params),
+      executorService
+    );
   }
 
   @Override
@@ -294,7 +331,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> colorProvider.getDocumentColor(documentContext));
+    return CompletableFuture.supplyAsync(
+      () -> colorProvider.getDocumentColor(documentContext),
+      executorService
+    );
   }
 
   @Override
@@ -304,7 +344,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> colorProvider.getColorPresentation(documentContext, params));
+    return CompletableFuture.supplyAsync(
+      () -> colorProvider.getColorPresentation(documentContext, params),
+      executorService
+    );
   }
 
   @Override
@@ -314,7 +357,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(Collections.emptyList());
     }
 
-    return CompletableFuture.supplyAsync(() -> inlayHintProvider.getInlayHint(documentContext, params));
+    return CompletableFuture.supplyAsync(
+      () -> inlayHintProvider.getInlayHint(documentContext, params),
+      executorService
+    );
   }
 
   @Override
@@ -380,7 +426,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    return CompletableFuture.supplyAsync(() -> documentLinkProvider.getDocumentLinks(documentContext));
+    return CompletableFuture.supplyAsync(
+      () -> documentLinkProvider.getDocumentLinks(documentContext),
+      executorService
+    );
   }
 
   @Override
@@ -397,7 +446,7 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       if (range != null) {
         diagnostics = diagnostics.stream()
           .filter(diagnostic -> Ranges.containsRange(range, diagnostic.getRange()))
-          .collect(Collectors.toList());
+          .toList();
       }
       return new Diagnostics(diagnostics, documentContext.getVersion());
     });
@@ -410,8 +459,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    return CompletableFuture.supplyAsync(() ->
-      Either3.forFirst(renameProvider.getPrepareRename(documentContext, params)));
+    return CompletableFuture.supplyAsync(
+      () -> Either3.forFirst(renameProvider.getPrepareRename(documentContext, params)),
+      executorService
+    );
   }
 
   @Override
@@ -421,7 +472,10 @@ public class BSLTextDocumentService implements TextDocumentService, ProtocolExte
       return CompletableFuture.completedFuture(null);
     }
 
-    return CompletableFuture.supplyAsync(() -> renameProvider.getRename(documentContext, params));
+    return CompletableFuture.supplyAsync(
+      () -> renameProvider.getRename(documentContext, params),
+      executorService
+    );
   }
 
   public void reset() {
